styles.css
/* ... */
.teachers-container img {
    border-radius: 50%;
}

.teacher {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: flex-end;
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow-primary);
    padding: 1rem;
    gap: 1rem;
    max-width: 300px;
    min-width: 320px;
    flex-basis: 25%;
    background-color: var(--background-color);
}



.teacher-info-1 p:first-of-type {
    color: var(--primary-color-light);
    font-style: italic;
}

.calendar-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    /* align-items: stretch; */
    gap: 2rem;
    flex-grow: 4;
}

.calendar-cards {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    justify-content: space-around;
}


/* Day Card */
.calendar-card {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background-color: var(--background-color);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow-secondary);
    padding: 1.5rem;
    max-width: 300px;
    min-width: 250px;
    flex-basis: 25%;
    color: var(--text-color);
}

.day-heading {
    text-align: center;
}

.location-group {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    /* box-shadow: var(--box-shadow-navbar); */
}

.location-heading {
    /* font-size: 1em; */
    color: var(--text-color-secondary);
    border-bottom: solid 0.2rem var(--secondary-color-dark);
    text-align: right;
    white-space: nowrap;
}

.teacher-name {
    /* font-size: small; */
    color: var(--text-color-secondary);
    /* margin-bottom: 0.3rem; */
    text-align: right;
}

.class-entry {
    display: flex;
    /* justify-content: space-between; */
    /* align-items: flex-start; */
    gap: 0.5rem;
}

.time {
    font-weight: bold;
    color: var(--secondary-color-light);
    flex: 0 0 4rem;
}

.class-name {
    font-size: 1em;
    color: var(--text-color);
}


.pricing-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 1rem;
    flex-grow: 4;
}


.pricing-cards {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    /* min-width: 200px; */
    /* width: 100%; */
    /* justify-content: space-evenly; */
    /* align-items: stretch;
    margin-block: 1rem;
    max-width: 80%;
    margin-inline: auto; */
    /* width: 100%; */
    gap: 1rem;

}


.pricing-summary {
    text-align: center;
    font-size: 1.2rem;
    line-height: 2;
    margin-top: 1rem;
}

.pricing-summary span {
    background-color: var(--primary-color);
    border-radius: var(--border-radius);
    padding-block: 0.2rem;
    padding-inline: 0.4rem;
    white-space: nowrap;
    font-weight: bold;
}

.pricing-card {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    gap: 1rem;
    background-color: var(--background-color);
    border-radius: var(--border-radius);
    box-shadow: var(--box-shadow-primary);
    /* padding-block: 1rem; */
    /* flex-basis: 200px; */
    padding-block: 2rem;
    padding-inline: 0.5rem;
    max-width: 300px;
    min-width: 260px;
    flex-basis: 25%;
}

.price {
    background-color: var(--primary-color);
    border-radius: var(--border-radius);
    padding-inline: 1rem;
    white-space: nowrap;
}

.currency {
    vertical-align: top;
}

.amount {
    font-size: 1.2rem;
    font-weight: bold;
}

.period {
    font-size: 1rem;
}

.features {
    list-style: none;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    width: 100%;
    padding: 0.5rem;
    text-align: left;
}

.features li {
    /* display: flex; */
    align-items: center;
    gap: 0.8rem;
    position: relative;
    padding-left: 0.5rem;
    /* Make space for the icon */
}

.available {
    color: var(--text-color);
}

.available span {
    margin-right: 0.5rem;
    color: var(--primary-color-light);
}

.not-available {
    color: var(--text-color-secondary);
}

.not-available span {
    margin-right: 0.5rem;
    color: var(--primary-color-dark);
}

.payment-methods {
    margin-top: 1rem;
}

.payment-methods li {
    margin-left: 1rem;
}

/* Gallery Section */
/* #gallery {
    background-color: var(--primary-color-dark);
} */

.gallery-container {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: space-evenly;
    flex-grow: 1;
}


lite-youtube {
    position: relative;
    width: 100%;
    max-width: var(--viewport-width-desktop) !important;
    border-radius: var(--border-radius) !important;
    background-image: none !important;
    background-color: black !important;
    /* cursor: auto; */
    display: flex !important;
    z-index: 1;
    pointer-events: none;
}


lite-youtube::before {
    overflow: visible !important;
    white-space: wrap !important;
    z-index: -1 !important;
    transition: opacity var(--transition-duration-fast) ease-in !important;
    opacity: 0;
    padding: 0.8rem !important;
    font-size: 1rem !important;
}

lite-youtube .lyt-playbtn {
    filter: none !important;
    z-index: -1 !important;
    transition: opacity var(--transition-duration-fast) ease-in !important;
    opacity: 0;
}

lite-youtube .lyt-visually-hidden {
    display: none !important;
}

lite-youtube.img-ready {
    pointer-events: auto !important;
}

lite-youtube.img-ready::before,
lite-youtube.img-ready .lyt-playbtn {
    z-index: 1 !important;
    opacity: 1;
}

/* Carousel Section */
.carousel {
    position: relative;
    width: 100%;
    overflow: hidden;
    touch-action: pan-y;
}

.carousel-container {
    display: flex;
    transition: transform var(--transition-duration) ease;
    margin-inline: 8%;
    /* Create space for peek preview */
    /* width: 120%; */
    /* Compensate for margins */
    will-change: transform;
}
/* ... */

